Profile Page updated

--- a/src/componets/navigation/navbar.scss
+++ b/src/componets/navigation/navbar.scss
@@ -51,7 +51,7 @@ label.logo{
   border-radius: 3px;
 }
 
-.nav .left-nav .active, .nav .left-nav .active:hover{
+.nav .left-nav .active, .nav .left-nav .active:hover, .nav .left-nav a:hover{
   transition: .5s; 
   color: #E10000;
 }
