--- a/src/componets/productSlider/product.scss
+++ b/src/componets/productSlider/product.scss
@@ -7,9 +7,8 @@
     }
 }
 
-.Product-image{
+.product-image{
     background: #e10000;  /* fallback for old browsers */    
-    height: 200px;
-    width: 200px;
-   
+    height:150px;
+    width: 150px;   
 }
