--- a/src/container/css/landing.scss
+++ b/src/container/css/landing.scss
@@ -4,7 +4,8 @@ body {
 .site-blocks-cover {
   background-size: cover;
   background: #56ccf2; /* fallback for old browsers */
-  background: -webkit-linear-gradient(   to bottom,
+  background: -webkit-linear-gradient(
+    to bottom,
     #2f80ed,
     #56ccf2
   ); /* Chrome 10-25, Safari 5.1-6 */
@@ -18,11 +19,31 @@ body {
   position: relative;
 }
 h1 {
-  font-size: 3.5rem;
   font-weight: 400;
-  color: #000000;
+  color: #333333;
   font-weight: 900;
   font-size: 2rem;
+}
+
+h2 {
+  font-weight: 400;
+  color: #333333;
+  font-weight: 900;
+  font-size: 1.5rem;
+}
+
+h3 {
+  font-weight: 400;
+  color: #333333;
+  font-weight: 900;
+  font-size: 1.2rem;
+}
+
+h4 {
+  font-weight: 400;
+  color: #333333;
+  font-weight: 900;
+  font-size: 1rem;
 }
 
 .intro-text {
@@ -33,7 +54,7 @@ h1 {
 }
 .intro-text-paaragraph {
   font-size: 1.2em;
-  line-height: 0.5;
+  line-height: 1;
   color: white;
 }
 
@@ -58,79 +79,210 @@ h1 {
   border: none;
   text-transform: uppercase;
   cursor: pointer;
+  padding: 10px 15px;
 }
 .btn-orange {
   background-color: #e10000;
   color: #ffffff;
   font-size: 14px;
-  padding: 10px 15px;
 }
 
-label{
-    color:#444444;
+.btn-grey {
+  background-color: #333333;
+  color: #ffffff;
+}
+
+label {
+  color: #444444;
 }
 
 input {
-  height: 35px;
-  width: 250px;
-  margin: 10px;
+  height: 40px;
+  width: 100%;
+  margin: 10px 0px;
   padding-left: 10px;
   border: 1px solid #d5d5d5;
   font-size: 15px;
 }
 
-.image-gallery{
-    background-size: cover;
-    background: #a8ff78;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to top, #78ffd6, #a8ff78);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to top, #78ffd6, #a8ff78); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    background-size: 100% 100%;
-    min-height: 295px;
-    position: relative;   
+.border-all {
+  border: 1px solid #444444;
 }
 
+.border-bottom{
+  border-bottom:1px solid #444444;
+}
 
-
+.image-gallery {
+  background-size: cover;
+  background: #a8ff78; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to top,
+    #78ffd6,
+    #a8ff78
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to top,
+    #78ffd6,
+    #a8ff78
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background-size: 100% 100%;
+  min-height: 295px;
+  position: relative;
+}
+.cursor-pointer {
+  cursor: pointer;
+}
 
 /* grid styles */
-
+.container {
+  width: 100%;
+  margin-right: auto;
+  margin-left: auto;
+}
 .row {
+  width: 100%;
+  padding: 10px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
-  bottom: 0px;
 }
 
-.block {
+.block-40 {
   flex: 0 0 33.333333%;
   max-width: 33.333333%;
 }
 
-.block-50{
-    flex: 0 0 50%;
-    max-width: 50%;
-    padding:5px
+.block-50 {
+  flex: 0 0 50%;
+  max-width: 50%;
 }
-.block-20{
-    flex: 0 0 20%;
-    max-width: 20%;
-    margin:20px
+.block-80 {
+  flex: 0 0 66.666667%;
+  max-width: 66.666667%;
+  height: auto;
+}
+.block-20 {
+  flex: 0 0 20%;
+  max-width: 20%;
+}
+.block-10 {
+  flex: 0 0 10%;
+  max-width: 10%;
 }
 
-.mt-10{
-    margin-top:10px;
+.width-100 {
+  width: 100%;
+}
+.width-300 {
+  width: 300px;
 }
 
+.mt-10 {
+  margin-top: 10px;
+}
 
-.mt-20{
-    margin-top:20px;
+.mt-20 {
+  margin-top: 20px;
 }
 
 .mb-10 {
   margin-bottom: 10px;
 }
+.mb-20 {
+  margin-bottom: 20px;
+}
+
+.ml-10 {
+  margin-left: 10px;
+}
+.ml-20 {
+  margin-left: 20px;
+}
+.mr-10 {
+  margin-right: 10px;
+}
+.mr-20 {
+  margin-right: 20px;
+}
+.m-10 {
+  margin: 10px;
+}
+.m-20 {
+  margin: 20px;
+}
+.mt-10 {
+  margin-top: 10px;
+}
+
+.mt-20 {
+  margin-top: 20px;
+}
+
+.mb-10 {
+  margin-bottom: 10px;
+}
+.mb-20 {
+  margin-bottom: 20px;
+}
+
+.mt-10pt {
+  margin-top: 10%;
+}
+.mt-20pt {
+  margin-top: 20%;
+}
+.ml-10pt {
+  margin-left: 10%;
+}
+.ml-20pt {
+  margin-left: 20%;
+}
+.mr-10pt {
+  margin-right: 10%;
+}
+.mr-20pt {
+  margin-right: 20%;
+}
+.m-10pt {
+  margin: 10%;
+}
+.m-20pt {
+  margin: 20%;
+}
+.mb-0 {
+  margin-bottom: 0px;
+}
+.mt-0 {
+  margin-top: 0px;
+}
+.ml-0 {
+  margin-left: 0px;
+}
+.mr-0 {
+  margin-right: 0px !important;
+}
+.m-0 {
+  margin: 0px;
+}
+.p-0{
+  padding:0
+}
+.pl-0{
+  padding-left:0px !important;
+}
+.pr-0{
+  padding-right:0px !important;
+}
+.pt-0{
+padding-top:0px !important;
+}
+.pb-0{
+  padding-bottom: 0px !important;
+}
+
 
 .pt-10 {
   padding-top: 10px;
@@ -138,6 +290,28 @@ input {
 
 .pt-20 {
   padding-top: 20px;
+}
+.pl-10 {
+  padding-left: 10px;
+}
+.pl-20 {
+  padding-left: 20px;
+}
+
+.pr-10 {
+  padding-right: 10px;
+}
+.pr-20 {
+  padding-right: 20px;
+}
+.p-10 {
+  padding: 10px;
+}
+.p-20 {
+  padding: 20px;
+}
+.pl-40{
+  padding-left:40px
 }
 .float-left {
   float: left;
@@ -150,66 +324,104 @@ input {
   float: right;
 }
 
-
-@media (max-width: 720px) {
-    .row {
-        display: -webkit-box;
-        display: -ms-flexbox;
-        display: flex;
-        -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-       
-      }
-      .block {
-        flex: 0 0 100%;
-        max-width: 100%;
-        height:auto
-      }
-      .block-50 {
-        flex: 0 0 100%;
-        max-width: 100%;
-        height:auto
-      }
-      .block-20{
-        flex: 0 0 75%;
-        max-width: 75%;
-      }
+@media (min-width: 920px) {
+  .lg-pl-10 {
+    padding-left: 10px;
+  }
 }
 
+@media (max-width: 720px) {
+  .sm-border-none{
+    border:none
+  }
+  .sm-display-none{
+    display: none;
+  }
+  .row {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+  }
+  .block-40 {
+    flex: 0 0 100%;
+    max-width: 100%;
+    height: auto;
+  }
+  .block-50 {
+    flex: 0 0 100%;
+    max-width: 100%;
+    height: auto;
+  }
+  .block-80 {
+    flex: 0 0 100%;
+    max-width: 100%;
+    height: auto;
+  }
+  .block-20 {
+    flex: 0 0 75%;
+    max-width: 75%;
+  }
+  .btn {
+    width: 100%;
+  }
 
-
-
+  .sm-block-20 {
+    flex: 0 0 20%;
+    max-width: 20%;
+  }
+  .sm-block-30 {
+    flex: 0 0 30%;
+    max-width: 30%;
+  }
+  .sm-block-50 {
+    flex: 0 0 50%;
+    max-width: 50%;
+  }
+  .sm-font-10 {
+    font-size: 10px !important;
+  }
+  .sm-font-12 {
+    font-size: 12px;
+  }
+  .sm-p-0 {
+    padding: 0 !important;
+  }
+  .sm-pl-0 {
+    padding-left: 0 !important;
+  }
+  .sm-m-0 {
+    margin: 0px !important;
+  }
+}
 
 .hr-text {
-    line-height: 1em;
-    position: relative;
-    outline: 0;
-    border: 0;
-    color: black;
-    text-align: center;
-    height: 1.5em;
-    opacity: .5;
-    &:before {
-      content: '';
-      // use the linear-gradient for the fading effect
-      // use a solid background color for a solid bar
-      background: linear-gradient(to right, transparent, #818078, transparent);
-      position: absolute;
-      left: 0;
-      top: 50%;
-      width: 100%;
-      height: 1px;
-    }
-    &:after {
-      content: attr(data-content);
-      position: relative;
-      display: inline-block;
-      color: black;
-  
-      padding: 0 .5em;
-      line-height: 1.5em;
-      // this is really the only tricky part, you need to specify the background color of the container element...
-      color: #818078;
-      background-color: #fcfcfa;
-    }
+  line-height: 1em;
+  position: relative;
+  outline: 0;
+  border: 0;
+  color: black;
+  text-align: center;
+  height: 1.5em;
+  opacity: 0.5;
+  &:before {
+    content: "";
+    background: linear-gradient(to right, transparent, #818078, transparent);
+    position: absolute;
+    left: 0;
+    top: 50%;
+    width: 100%;
+    height: 1px;
   }
+  &:after {
+    content: attr(data-content);
+    position: relative;
+    display: inline-block;
+    color: black;
+    padding: 0 0.5em;
+    line-height: 1.5em;
+    color: #818078;
+    background-color: #fcfcfa;
+  }
+}
