--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -18,34 +18,31 @@ body {
   min-height: 600px;
   position: relative;
 }
+/* text styles */
 h1 {
   font-weight: 400;
   color: #333333;
   font-weight: 900;
   font-size: 2rem;
 }
-
 h2 {
   font-weight: 400;
   color: #333333;
   font-weight: 900;
   font-size: 1.5rem;
 }
-
 h3 {
   font-weight: 400;
   color: #333333;
   font-weight: 900;
   font-size: 1.2rem;
 }
-
 h4 {
   font-weight: 400;
   color: #333333;
   font-weight: 900;
   font-size: 1rem;
 }
-
 .intro-text {
   font-size: 1.5em;
   font-weight: bold;
@@ -74,6 +71,39 @@ h4 {
 .text-orange {
   color: #e10000;
 }
+
+/* hr styles */
+.hr-text {
+  line-height: 1em;
+  position: relative;
+  outline: 0;
+  border: 0;
+  color: black;
+  text-align: center;
+  height: 1.5em;
+  opacity: 0.5;
+  &:before {
+    content: "";
+    background: linear-gradient(to right, transparent, #818078, transparent);
+    position: absolute;
+    left: 0;
+    top: 50%;
+    width: 100%;
+    height: 1px;
+  }
+  &:after {
+    content: attr(data-content);
+    position: relative;
+    display: inline-block;
+    color: black;
+    padding: 0 0.5em;
+    line-height: 1.5em;
+    color: #818078;
+    background-color: #fcfcfa;
+  }
+}
+
+/* buttons style */
 .btn {
   position: relative;
   border: none;
@@ -86,16 +116,13 @@ h4 {
   color: #ffffff;
   font-size: 14px;
 }
-
 .btn-grey {
   background-color: #333333;
   color: #ffffff;
 }
-
 label {
   color: #444444;
 }
-
 input {
   height: 40px;
   width: 100%;
@@ -104,7 +131,6 @@ input {
   border: 1px solid #d5d5d5;
   font-size: 15px;
 }
-
 .border-all {
   border: 1px solid #444444;
 }
@@ -112,7 +138,6 @@ input {
 .border-bottom{
   border-bottom:1px solid #444444;
 }
-
 .image-gallery {
   background-size: cover;
   background: #a8ff78; /* fallback for old browsers */
@@ -282,8 +307,6 @@ padding-top:0px !important;
 .pb-0{
   padding-bottom: 0px !important;
 }
-
-
 .pt-10 {
   padding-top: 10px;
 }
@@ -393,35 +416,5 @@ padding-top:0px !important;
   }
   .sm-m-0 {
     margin: 0px !important;
-  }
-}
-
-.hr-text {
-  line-height: 1em;
-  position: relative;
-  outline: 0;
-  border: 0;
-  color: black;
-  text-align: center;
-  height: 1.5em;
-  opacity: 0.5;
-  &:before {
-    content: "";
-    background: linear-gradient(to right, transparent, #818078, transparent);
-    position: absolute;
-    left: 0;
-    top: 50%;
-    width: 100%;
-    height: 1px;
-  }
-  &:after {
-    content: attr(data-content);
-    position: relative;
-    display: inline-block;
-    color: black;
-    padding: 0 0.5em;
-    line-height: 1.5em;
-    color: #818078;
-    background-color: #fcfcfa;
   }
 }
