--- a/src/componets/sidebar/sidebar.scss
+++ b/src/componets/sidebar/sidebar.scss
@@ -1,7 +1,8 @@
 .profile-image{
-    background-color:yellowgreen;
+    background: url(../../assets/images/profile.png);
     height:100px;
     width:100px;
+    background-size: 100% auto;
     border-radius:50%
 }
 
