--- a/src/componets/footer/footer.scss
+++ b/src/componets/footer/footer.scss
@@ -1,30 +1,28 @@
 .footer1 {
   margin-top: 50px;
   background-size: cover;
-  background: #2193b0;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to bottom, #6dd5ed, #2193b0);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to bottom, #6dd5ed, #2193b0); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background:linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../../assets/images/footer-cover.png);
   background-size: 100% 100%;
   height: 400px;
   position: relative;
 
   .locate-us {
     position: absolute;
-    padding:10px;
+    padding: 10px;
     bottom: -5px;
     right: 30px;
     background-color: #444444;
-    color:#ffffff; 
-    font-size:15px;
+    color: #ffffff;
+    font-size: 15px;
     font-weight: bold;
     border-radius: 4px;
   }
 
-  input{
-    width:250px;
+  input {
+    width: 250px;
     margin-right: 10px;
   }
-  .btn{
+  .btn {
     height: 40px;
     margin-bottom: 20px;
   }
@@ -37,7 +35,6 @@
   margin: 0;
   padding: 3rem 0rem;
 
-  
   a {
     padding: 10px 0px;
     text-decoration: none;
@@ -71,7 +68,7 @@
   .contact {
     padding-left: 10px;
     text-decoration: none;
-    color: #bbbbbb;    
+    color: #bbbbbb;
     font-size: 1rem;
     line-height: 2;
   }
@@ -86,17 +83,19 @@ ul.float-right li {
 }
 
 @media (max-width: 720px) {
-  .footer1{
+  .footer1 {
+    background:linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../../assets/images/mobile-footer-cover.png);
+  
     .locate-us {
       left: 35%;
       right: 135px;
     }
-    
-  input{
-    width:100%;
-    margin-right: 10px;
+
+    input {
+      width: 100%;
+      margin-right: 10px;
+    }
   }
-  }  
   .footer2 {
     .row {
       display: -webkit-box;
@@ -121,9 +120,9 @@ ul.float-right li {
     .text-none {
       text-align: center;
     }
-    
-  .logo {
-    margin-left: 30px;
-  }
+
+    .logo {
+      margin-left: 30px;
+    }
   }
 }
