--- a/src/componets/orders/orders.scss
+++ b/src/componets/orders/orders.scss
@@ -1,7 +1,9 @@
 .order-image{
     height:100px;
     width: 100px;
-    background-color: #e10000;
+    background: url(../../assets/images/order.png);
+    background-size: 100% auto;
+    border:3px solid  #DDDDDD
 }
 
 
@@ -28,7 +30,9 @@ hr{
     .order-image{
         height:70px;
         width: 70px;
-        background-color: #e10000;
+        background: url(../../assets/images/order.png);
+        background-size: 100% auto;
+        border:3px solid  #DDDDDD
     }
     .order-status{ 
         right:0px;
