--- a/src/componets/productSlider/product.scss
+++ b/src/componets/productSlider/product.scss
@@ -8,7 +8,16 @@
 }
 
 .product-image{
-    background: #e10000;  /* fallback for old browsers */    
+    background: url(../../assets/images/collection1.png);
+    background-size: 100% auto;
+    min-height: 200px;    
+    height:150px;
+    width: 150px;   
+}
+.product-image-1{
+    background: url(../../assets/images/collection2.png);
+    background-size: 100% auto;
+    min-height: 200px;    
     height:150px;
     width: 150px;   
 }
