--- a/src/componets/productSlider/product.scss
+++ b/src/componets/productSlider/product.scss
@@ -10,14 +10,15 @@
 .product-image{
     background: url(../../assets/images/collection1.png);
     background-size: 100% auto;
-    min-height: 200px;    
-    height:150px;
-    width: 150px;   
+    background-size: 100% auto;
+    min-height: 200px;
+    height: 200px;
+    width: 200px 
 }
 .product-image-1{
     background: url(../../assets/images/collection2.png);
     background-size: 100% auto;
-    min-height: 200px;    
-    height:150px;
-    width: 150px;   
+    min-height: 200px;
+    height: 200px;
+    width: 200px
 }
