--- a/src/componets/footer/footer.scss
+++ b/src/componets/footer/footer.scss
@@ -2,8 +2,8 @@
   margin-top: 50px;
   background-size: cover;
   background:linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../../assets/images/footer-cover.png);
-  background-size: 100% 100%;
-  height: 400px;
+  background-size: 100% auto;
+  height: 300px;
   position: relative;
 
   .locate-us {
@@ -85,7 +85,7 @@ ul.float-right li {
 @media (max-width: 720px) {
   .footer1 {
     background:linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../../assets/images/mobile-footer-cover.png);
-  
+    background-size: 100% auto;
     .locate-us {
       left: 35%;
       right: 135px;
