--- a/src/componets/footer/footer.scss
+++ b/src/componets/footer/footer.scss
@@ -86,6 +86,7 @@ ul.float-right li {
   .footer1 {
     background:linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../../assets/images/mobile-footer-cover.png);
     background-size: 100% auto;
+    height: 400px;
     .locate-us {
       left: 35%;
       right: 135px;
