--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -3,7 +3,7 @@ body {
 }
 .site-blocks-cover {
   background-repeat: no-repeat;
-  background: linear-gradient(0deg, rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)), url(../assets/images/site-cover.png);
+  background: url(../assets/images/site-cover.png);
   background-size: 100% auto;
   height: 600px;
   position: relative;
@@ -11,7 +11,7 @@ body {
 
 .site-block-1 {
   background-repeat: no-repeat;
-  background: linear-gradient(0deg, rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)), url(../assets/images/group_1.png);
+  background:  url(../assets/images/group_1.png);
   background-size: 100% auto;
   height: 600px;
   position: relative;
@@ -139,16 +139,14 @@ input {
 }
 .image-gallery-1 {
   background-size: cover;
-  background: #a8ff78; /* fallback for old browsers */
-  background: linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.25)), url(../assets/images/group_2.png);
+  background:  url(../assets/images/group_2.png);
   background-size: 100% auto;
   min-height: 295px;
   position: relative;
 }
 .image-gallery-2{
   background-size: cover;
-  background: #a8ff78; /* fallback for old browsers */
-  background: linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.25)), url(../assets/images/group_3.png);
+  background: url(../assets/images/group_3.png);
   background-size: 100% auto;
   min-height: 295px;
   position: relative;
@@ -417,14 +415,14 @@ padding-top:0px !important;
   }
   .site-blocks-cover {
     background-repeat: no-repeat;
-      background: linear-gradient(0deg, rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)), url(../assets/images/mobile-site-cover.png);
+      background:url(../assets/images/mobile-site-cover.png);
       background-size: 100% auto;
       min-height: 700px;
       position: relative;
   }
   .site-block-1 {
     background-repeat: no-repeat;
-    background: linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.25)), url(../assets/images/group_1.png);
+    background: url(../assets/images/group_1.png);
     background-size: 100% auto;
     height: 400px;
     position: relative;
@@ -432,16 +430,14 @@ padding-top:0px !important;
 
   .image-gallery-1 {
     background-size: cover;
-    background: #a8ff78; /* fallback for old browsers */
-    background: linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.25)), url(../assets/images/group_2.png);
+    background: url(../assets/images/group_2.png);
     background-size: 100% auto;
     min-height: 200px;
     position: relative;
   }
   .image-gallery-2{
-    background-size: cover;
-    background: #a8ff78; /* fallback for old browsers */
-    background: linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.25)), url(../assets/images/group_3.png);
+    background-size: cover;  
+    background:url(../assets/images/group_3.png);
     background-size: 100% auto;
     min-height: 200px;
     position: relative;
