font weight update

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -21,25 +21,25 @@ body {
 h1 {
   font-weight: 400;
   color: #333333;
-  font-weight: 900;
+  font-weight: normal;
   font-size: 2rem;
 }
 h2 {
   font-weight: 400;
   color: #333333;
-  font-weight: 900;
+  font-weight: normal;
   font-size: 1.5rem;
 }
 h3 {
   font-weight: 400;
   color: #333333;
-  font-weight: 900;
+  font-weight: normal;
   font-size: 1.2rem;
 }
 h4 {
   font-weight: 400;
   color: #333333;
-  font-weight: 900;
+  font-weight: normal;
   font-size: 1rem;
 }
 .intro-text {
