mobile navbar & code Refactoring

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -345,6 +345,9 @@ padding-top:0px !important;
 .float-right {
   float: right;
 }
+.width-90pt{
+  width:90%
+}
 
 @media (min-width: 920px) {
   .lg-pl-10 {
