--- a/src/componets/navigation/navbar.scss
+++ b/src/componets/navigation/navbar.scss
@@ -1,4 +1,3 @@
-// navbar css
 *{
    text-decoration: none;
   list-style: none;
@@ -83,16 +82,16 @@ label.logo{
     z-index: 999;
   }
   ul.mobile-nav{
-       position: fixed;
+    position: fixed;
     width: 350px;
     height: 100vh;
     background: #ffffff;
     z-index:10;
-    right:-100%;
+    right:0;
     padding:30% 5% !important;
     border-left: 1px solid #DDDDDD;
     text-align: center;
-    transition: all .5s;
+    transition: all .6s;
   }
   .nav ul.mobile-nav li{
     display: block;
@@ -113,12 +112,17 @@ label.logo{
   #check:checked ~ ul{
     right: 0;
   }
-
+  .circle{
+    height:40px;
+    width:40px;
+    border-radius: 50%;
+    background-color:#E8F7FD
+  }
+  .slider a{
+    color:#444444;
+    font-size: 12px;
+  }
   .display-none{
     display: none !important;
   }
-}
-section{  
-  background-size: cover;
-  height: calc(100vh - 70px);
 }
