--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -70,6 +70,9 @@ h4 {
 .text-orange {
   color: #e10000;
 }
+.text-gray{
+  color:#d5d5d5;
+}
 
 /* hr styles */
 .hr-text {
@@ -119,7 +122,7 @@ h4 {
   background-color: #333333;
   color: #ffffff;
 }
-label {
+label,.label {
   color: #444444;
 }
 input {
@@ -136,6 +139,10 @@ input {
 
 .border-bottom{
   border-bottom:1px solid #444444;
+}
+.border-left{
+  border-left:1px solid #444444;
+  
 }
 .image-gallery-1 {
   background-size: cover;
@@ -335,6 +342,9 @@ padding-top:0px !important;
 .pl-40{
   padding-left:40px
 }
+.pl-10pt{
+  padding-left:10%
+}
 .float-left {
   float: left;
 }
@@ -469,4 +479,31 @@ padding-top:0px !important;
     min-height: 200px;
     position: relative;
   }
+
+}
+
+
+@media (max-width: 360px) {
+ .ssm-font-10{
+    font-size:10px;    
+ }
+ .ssm-font-12{
+  font-size:12px;    
+}
+ .ssm-pl-10{
+  padding-left:10px;
+ }
+ .ss-pr-10{
+   padding-right:10px;
+ }
+ .ss-ml-10{
+   margin-left:10px;
+ }
+ .ss-mr-10{
+   margin-right:10px;
+ }
+ .ssm-pl-15{
+  padding-left:15px;
+ }
+
 }
