--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -359,11 +359,18 @@ padding-top:0px !important;
   width:90%
 }
 
+
 @media (min-width: 920px) {
   .lg-pl-10 {
     padding-left: 10px;
   }
   .lg-display-none{
+    display:none
+  }
+}
+
+@media (min-width: 721px) {
+    .lg-display-none{
     display:none
   }
 }
